--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -5,6 +5,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/title_city"
+        android:layout_centerInParent="true"
+        android:textColor="#fff"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/title_update_time"
         android:layout_marginEnd="10dp"
         android:layout_alignParentEnd="true"
